--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-js-pagination": "^3.0.2",
     "react-scripts": "3.0.1"
   },
   "scripts": {
